fix: chevron direction and dark mode input color

--- a/src/components/country-multi-select/CountryMultiSelectExpanded.module.scss
+++ b/src/components/country-multi-select/CountryMultiSelectExpanded.module.scss
@@ -46,6 +46,7 @@
   > input {
     flex-grow: 1;
     padding: 0 4px;
+    background: theme.$amino-input-background;
 
     &:focus {
       outline: none;
